# docs/swagger.json
@@ -5,25 +5,6 @@
         "contact": {}
     },
     "paths": {
-        "/appointment/all": {
-            "get": {
-                "tags": [
-                    "Appointment Handlers"
-                ],
-                "summary": "Doctor gets all his appointments",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.AppointmentResponse"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/appointment/book": {
             "post": {
                 "tags": [
@@ -39,6 +20,14 @@
                         "schema": {
                             "$ref": "#/definitions/models.AppointmentRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -46,6 +35,71 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/models.AppointmentResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/appointment/doc-all": {
+            "get": {
+                "tags": [
+                    "Appointment Handlers"
+                ],
+                "summary": "Doctor gets all his appointments",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AppointmentResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/appointment/pat-all/{patientid}": {
+            "get": {
+                "tags": [
+                    "Appointment Handlers"
+                ],
+                "summary": "Patient gets all his appointments",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Patient UUID",
+                        "name": "patientid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AppointmentResponse"
+                            }
                         }
                     }
                 }
@@ -64,6 +118,14 @@
                         "name": "appointmentid",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -81,13 +143,21 @@
                 "tags": [
                     "Appointment Handlers"
                 ],
-                "summary": "Delete an appointment by a Doctor or Patient",
+                "summary": "Delete all appointment by a Patient",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Apointment UUID",
-                        "name": "appointmentid",
+                        "description": "Patient UUID",
+                        "name": "patientid",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -111,11 +181,48 @@
                         "name": "appointmentid",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "Appointment deleted successfully"
+                    }
+                }
+            }
+        },
+        "/doctors/all": {
+            "get": {
+                "tags": [
+                    "Appointment Handlers"
+                ],
+                "summary": "Patient gets list of doctors",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DoctorResp"
+                            }
+                        }
                     }
                 }
             }
@@ -233,6 +340,9 @@
         "models.AppointmentRequest": {
             "type": "object",
             "properties": {
+                "appointment_date": {
+                    "type": "string"
+                },
                 "appointment_details": {
                     "type": "string"
                 },
@@ -247,6 +357,9 @@
         "models.AppointmentResponse": {
             "type": "object",
             "properties": {
+                "appointment_date": {
+                    "type": "string"
+                },
                 "appointment_details": {
                     "type": "string"
                 },
@@ -266,6 +379,20 @@
                     "type": "string"
                 },
                 "patient_uuid": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.DoctorResp": {
+            "type": "object",
+            "properties": {
+                "doctor_email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 }
             }
