# routes.go/routes.go
@@ -37,10 +37,11 @@ func Routes(ctrl *handlers.HandlerService) *gin.Engine {
 	router.Use(middleware.Auth())
 	router.POST("/appointment/book", ctrl.BookAppointment)
 	router.GET("/appointment/doc-all", ctrl.GetAllAppointmentByDoctor)
-	router.GET("/appointment/pat-all", ctrl.PatientGetAllAppointment)
+	router.GET("/appointment/pat-all/:patientid", ctrl.PatientGetAllAppointment)
 	router.GET("/appointment/:appointmentid", ctrl.GetAppointment)
 	router.DELETE("/delete/:appointmentid", ctrl.DeleteApppointment)
 	router.DELETE("/delete-all/:patientid", ctrl.DeleteAllAppointment)
+	router.GET("/doctors/all", ctrl.GetAllDoctors)
 
 	return router
 }
